remove unused class

--- a/custom-web-app.html
+++ b/custom-web-app.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="position-relative">
+    <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top navigation">
             <div class="container">
                 <a class="navbar-brand me-0" href="#" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="2000"><img src="./assets/img/Logo_edited.png" alt="logo-nineod" width="70" /></a>
@@ -28,7 +28,7 @@
                         <li><a href="/#about" class="page-scroll">About</a></li>
                         <li><a href="/#projects" class="page-scroll">Projects</a></li>
                         <li>
-                            <span class="position-relative">Service <i class="fas fa-chevron-down arrow-dropdown fs-6"></i></span> 
+                            <span class="position-relative">Service <i class="fas fa-chevron-down arrow-dropdown fs-6"></i></span>
                             <ul class="ps-0">
                                 <li><a href="website-builder.html" id="website-link">Website Builder</a></li>
                                 <li><a href="platform-builder.html" id="platform-link">Platform Builder</a></li>
@@ -76,10 +76,10 @@
             </div>
         </nav>
     </header>
-    <section class="custome-home">
+    <section class="section-first custome-background">
         <div class="background-dark-thin">
             <div class="container">
-                <div class="custome-home-body d-flex flex-column justify-content-center text-center align-items-center text-white">
+                <div class="section-first-body d-flex flex-column justify-content-center text-center align-items-center text-white">
                     <h1 class="text-capitalize mb-3 fw-light" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
                         Custom Web Application Development
                     </h1>
@@ -99,97 +99,93 @@
     <a href="https://api.whatsapp.com/send?phone=+628112108020&text=Hello,%20i%20want%20to%20ask%20about%20website" class="wa-image-wrapper shadow d-flex justify-content-center align-items-center">
         <img src="./assets/img/iconfinder_social-whatsapp-circle_4017334.svg" alt="whatsapp-image" class="wa-image rounded-circle" />
     </a>
-    <section class="section-one background-info">
+    <section class="section-second background-info py-5">
         <div class="container d-flex">
             <div class="row gy-4">
-                <div class="col-md-6">
-                    <div class="section-one-title d-flex flex-column" data-aos="fade-right" data-aos-duration="2000">
-                        <h2 class="fw-bold text-black">
-                            Buat Web Aplikasi Anda Sendiri
-                        </h2>
-                        <p class="mb-4">
-                            Mulai kembangkan bisnis anda di era digital ini, dan manfaatkan fitur-fitur menarik yang kami sediakan.
-                        </p>
+                <div class="col-md-6 section-second-text d-flex flex-column" data-aos="fade-right" data-aos-duration="2000">
+                    <h1 class="fw-bold text-black fs-2">
+                        Buat Web Aplikasi Anda Sendiri
+                    </h1>
+                    <p class="mb-4">
+                        Mulai kembangkan bisnis anda di era digital ini, dan manfaatkan fitur-fitur menarik yang kami sediakan.
+                    </p>
 
-                        <div class="row">
-                            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
-                                <h5 class="fw-bold mb-3 text-black">Pembayaran Online yang Aman</h5>
-                                <p>
-                                    Terima pembayaran online yang aman & kelola semua transaksi dari dasbor Wix Anda.
-                                </p>
-                            </div>
-                            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="400">
-                                <h5 class="fw-bold mb-3 text-black">Paket & Pembayaran Berulang</h5>
-                                <p>
-                                    Tawarkan berbagai paket harga, mulai jual langganan & kumpulkan pembayaran berulang.
-                                </p>
-                            </div>
-                            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500">
-                                <h5 class="fw-bold text-black mb-3">Produk Tak Terbatas</h5>
-                                <p>
-                                    Tampilkan produk & koleksi Anda tanpa batas dan berikan opsi pengurutan & filter agar pelanggan dapat berbelanja dengan mudah.
-                                </p>
-                            </div>
-                            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="600">
-                                <h5 class="fw-bold mb-3 text-black">Jual di Marketplaces</h5>
-                                <p>
-                                    Jangkau lebih banyak pembeli & jual di marketplace manapun.
-                                </p>
-                            </div>
+                    <div class="row">
+                        <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
+                            <h1 class="fw-bold mb-3 text-black fs-5">Pembayaran Online yang Aman</h1>
+                            <p>
+                                Terima pembayaran online yang aman & kelola semua transaksi dari dasbor Wix Anda.
+                            </p>
+                        </div>
+                        <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="400">
+                            <h1 class="fw-bold mb-3 text-black fs-5">Paket & Pembayaran Berulang</h1>
+                            <p>
+                                Tawarkan berbagai paket harga, mulai jual langganan & kumpulkan pembayaran berulang.
+                            </p>
+                        </div>
+                        <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500">
+                            <h1 class="fw-bold text-black mb-3 fs-5">Produk Tak Terbatas</h1>
+                            <p>
+                                Tampilkan produk & koleksi Anda tanpa batas dan berikan opsi pengurutan & filter agar pelanggan dapat berbelanja dengan mudah.
+                            </p>
+                        </div>
+                        <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="600">
+                            <h1 class="fw-bold mb-3 text-black fs-5">Jual di Marketplaces</h1>
+                            <p>
+                                Jangkau lebih banyak pembeli & jual di marketplace manapun.
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="./assets/img/Custom.jpg" alt="burger_edited" class="section-one-img img-fluid h-100" />
+                    <img src="./assets/img/Custom.jpg" alt="burger_edited" class="img-fluid h-100" />
                 </div>
             </div>
         </div>
     </section>
-    <section class="section-two py-5 overflow-hidden bg-white">
+    <section class="section-third py-5 overflow-hidden">
         <div class="container">
             <div class="row gy-4">
                 <div class="col-md-6">
-                    <img src="./assets/img/CwA.jpg" alt="profesional-logo-img" class="img-fluid w-100 h-100 section-two-img" data-aos="fade-right" data-aos-duration="2000" />
+                    <img src="./assets/img/CwA.jpg" alt="profesional-logo-img" class="img-fluid h-100" data-aos="fade-right" data-aos-duration="2000" />
                 </div>
-                <div class="col-md-6">
-                    <div class="section-two-title h-100 d-flex flex-column justify-content-center" data-aos="fade-left" data-aos-duration="2000">
-                        <h2 class="fw-bold text-black">Jual Lebih Banyak Secara Online di Social Media</h2>
-                        <p class="mb-4">
-                            Avenir Light is a clean and stylish font favored by designers. It's easy on the eyes and a great go to font for titles, paragraphs & more.
-                        </p>
-                        <div class="row">
-                            <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="300">
-                                <h5 class="fw-bold mb-3 text-uppercase">Lorem ipsum dolor</h5>
-                                <p>
-                                    Avenir Light is a clean and stylish font favored by
-                                    designers. It's easy on the eyes and a great go to font for
-                                    titles, paragraphs & more.
-                                </p>
-                            </div>
-                            <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="400">
-                                <h5 class="fw-bold mb-3 text-uppercase">lorem ipsum dolor</h5>
-                                <p>
-                                    Avenir Light is a clean and stylish font favored by
-                                    designers. It's easy on the eyes and a great go to font for
-                                    titles, paragraphs & more.
-                                </p>
-                            </div>
-                            <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="500">
-                                <h5 class="fw-bold mb-3 text-uppercase">lorem ipsum dolor</h5>
-                                <p>
-                                    Avenir Light is a clean and stylish font favored by
-                                    designers. It's easy on the eyes and a great go to font for
-                                    titles, paragraphs & more.
-                                </p>
-                            </div>
-                            <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="500">
-                                <h5 class="fw-bold mb-3 text-uppercase">lorem ipsum dolor</h5>
-                                <p>
-                                    Avenir Light is a clean and stylish font favored by
-                                    designers. It's easy on the eyes and a great go to font for
-                                    titles, paragraphs & more.
-                                </p>
-                            </div>
+                <div class="col-md-6 section-third-text h-100 d-flex flex-column justify-content-center" data-aos="fade-left" data-aos-duration="2000">
+                    <h1 class="fw-bold text-black fs-3">Jual Lebih Banyak Secara Online di Social Media</h1>
+                    <p class="mb-4">
+                        Avenir Light is a clean and stylish font favored by designers. It's easy on the eyes and a great go to font for titles, paragraphs & more.
+                    </p>
+                    <div class="row">
+                        <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="300">
+                            <h1 class="fw-bold mb-3 text-uppercase text-black fs-5">Lorem ipsum dolor</h1>
+                            <p>
+                                Avenir Light is a clean and stylish font favored by
+                                designers. It's easy on the eyes and a great go to font for
+                                titles, paragraphs & more.
+                            </p>
+                        </div>
+                        <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="400">
+                            <h1 class="fw-bold mb-3 text-uppercase text-black fs-5">lorem ipsum dolor</h1>
+                            <p>
+                                Avenir Light is a clean and stylish font favored by
+                                designers. It's easy on the eyes and a great go to font for
+                                titles, paragraphs & more.
+                            </p>
+                        </div>
+                        <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="500">
+                            <h1 class="fw-bold mb-3 text-uppercase text-black fs-5">lorem ipsum dolor</h1>
+                            <p>
+                                Avenir Light is a clean and stylish font favored by
+                                designers. It's easy on the eyes and a great go to font for
+                                titles, paragraphs & more.
+                            </p>
+                        </div>
+                        <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="500">
+                            <h1 class="fw-bold mb-3 text-uppercase text-black fs-5">lorem ipsum dolor</h1>
+                            <p>
+                                Avenir Light is a clean and stylish font favored by
+                                designers. It's easy on the eyes and a great go to font for
+                                titles, paragraphs & more.
+                            </p>
                         </div>
                     </div>
                 </div>
