--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <p class="m-0">Custom Apps, Website Builder & Platform Builder</p>
         </div>
       </div>
-      <div class="about-card row">
+      <div class="about-card row gy-4">
         <div class="col-md-4 mb-3">
           <div class="box-card shadow d-flex flex-column text-center align-items-center" data-aos="fade-right" data-aos-duration="2000">
             <img src="./assets/img/Custom Web App.svg" alt="custom-web-app" class="mb-3" />
