--- a/services.html
+++ b/services.html
@@ -76,10 +76,10 @@
             </div>
         </nav>
     </header>
-    <section class="services-home">
+    <section class="section-first services-background">
         <div class="background-dark-thin">
             <div class="container">
-                <div class="services-home-body d-flex flex-column justify-content-center text-center align-items-center text-white">
+                <div class="section-first-body d-flex flex-column justify-content-center text-center align-items-center text-white">
                     <h1 class="text-capitalize  fw-light" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
                         punya bisnis?
                     </h1>
@@ -104,19 +104,16 @@
     <a href="https://api.whatsapp.com/send?phone=+628112108020&text=Hello,%20i%20want%20to%20ask%20about%20website" class="wa-image-wrapper shadow d-flex justify-content-center align-items-center">
         <img src="./assets/img/iconfinder_social-whatsapp-circle_4017334.svg" alt="whatsapp-image" class="wa-image rounded-circle" />
     </a>
-    <section class="section-services-one">
+    <section class="section-second py-5">
         <div class="container d-flex">
             <div class="row gy-4">
-                <div class="col-md-6">
-                    <div class="section-services-one-title d-flex flex-column justify-content-center h-100" data-aos="fade-right" data-aos-duration="2000">
-                        <h1 class="text-black">
-                            Buat Website dengan Domain anda sendiri
-                        </h1>
-                        <p class="mb-4 w-75">
-                            Tingkatkan kepercayaan pelanggan anda dengan menggunakan domain anda sendiri.
-                        </p>
-                    </div>
-
+                <div class="col-md-6 section-second-text d-flex flex-column justify-content-center" data-aos="fade-right" data-aos-duration="2000">
+                    <h1 class="text-black">
+                        Buat Website dengan Domain anda sendiri
+                    </h1>
+                    <p class="mb-4 w-75">
+                        Tingkatkan kepercayaan pelanggan anda dengan menggunakan domain anda sendiri.
+                    </p>
                 </div>
                 <div class="col-md-6">
                     <img src="./assets/img/Custom Domain2.jpg" alt="burger_edited" class="section-one-img img-fluid" />
@@ -124,36 +121,31 @@
             </div>
         </div>
     </section>
-    <section class="section-services-two overflow-hidden">
+    <section class="section-third py-5 overflow-hidden">
         <div class="container">
             <div class="row gy-4">
                 <div class="col-md-6">
                     <img src="./assets/img/Online Shopping.jpg" alt="profesional-logo-img" class="img-fluid w-100 h-100 section-two-img" />
                 </div>
-                <div class="col-md-6">
-                    <div class="section-services-two-title h-100 d-flex flex-column justify-content-center">
-                        <h1 class="text-black" data-aos="fade-left" data-aos-duration="2000">Tawarkan Produk anda di Sosial Media</h1>
-                        <p class="mb-4" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="100">
-                            Anda dapat mempromosikan website penjualan di social media yang terintegrasi dengan Facebook & Instagram.
-                        </p>
-
-                    </div>
+                <div class="col-md-6 section-third-text h-100 d-flex flex-column justify-content-center">
+                    <h1 class="text-black" data-aos="fade-left" data-aos-duration="2000">Tawarkan Produk anda di Sosial Media</h1>
+                    <p class="mb-4" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="100">
+                        Anda dapat mempromosikan website penjualan di social media yang terintegrasi dengan Facebook & Instagram.
+                    </p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="section-services-three overflow-hidden">
+    <section class="section-fourth py-5 overflow-hidden">
         <div class="container d-flex">
             <div class="row gy-4">
-                <div class="col-md-6">
-                    <div class="section-services-three-title d-flex flex-column justify-content-center h-100">
-                        <h1 class="text-black" data-aos="fade-right" data-aos-duration="2000">
-                            Monitor Perkembangan Bisnis Anda Secara Langsung
-                        </h1>
-                        <p class="mb-4" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="100">
-                            Lihat laporan statistik tentang situs Anda. Dari mana pengunjung Anda berasal dan halaman mana yangpaling banyak di akses & lainnya, melaui perangkat Analitik di Website.
-                        </p>
-                    </div>
+                <div class="col-md-6 section-fourth-text d-flex flex-column justify-content-center">
+                    <h1 class="text-black" data-aos="fade-right" data-aos-duration="2000">
+                        Monitor Perkembangan Bisnis Anda Secara Langsung
+                    </h1>
+                    <p class="mb-4" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="100">
+                        Lihat laporan statistik tentang situs Anda. Dari mana pengunjung Anda berasal dan halaman mana yangpaling banyak di akses & lainnya, melaui perangkat Analitik di Website.
+                    </p>
                 </div>
                 <div class="col-md-6">
                     <img src="./assets/img/OnlineShop.jpg" alt="burger_edited" class="section-one-img img-fluid" />
@@ -161,39 +153,33 @@
             </div>
         </div>
     </section>
-    <section class="section-services-four py-5 background-gray">
+    <section class="section-fifth py-5 background-gray">
         <div class="container">
-            <div class="row" data-aos="fade-in" data-aos-duration="2000">
-                <div class="col-md-4">
-                    <div class="section-services-four-title">
-                        <h3 class="fw-bold text-black">Mobile Optimized</h3>
-                        <p>Website Anda akan terlihat menarik dalam versi mobile</p>
-                    </div>
+            <div class="row gy-3" data-aos="fade-in" data-aos-duration="2000">
+                <div class="col-md-4 section-fifth-text text-break">
+                    <h1 class="fw-bold text-black fs-3">Mobile Optimized</h1>
+                    <p class="fs-6 mb-0">Website Anda akan terlihat menarik dalam versi mobile</p>
                 </div>
-                <div class="col-md-4">
-                    <div class="section-services-four-title">
-                        <h3 class="fw-bold text-black">The Best SEO</h3>
-                        <p>Dapat ditemukan di mesin pencari seperti Google dengan tools SEO tingkat lanjut.</p>
-                    </div>
+                <div class="col-md-4 section-fifth-text">
+                    <h1 class="fw-bold text-black fs-3">The Best SEO</h1>
+                    <p class="fs-6 mb-0">Dapat ditemukan di mesin pencari seperti Google dengan tools SEO tingkat lanjut.</p>
                 </div>
-                <div class="col-md-4">
-                    <div class="section-services-four-title">
-                        <h3 class="fw-bold text-black">Custom Domains</h3>
-                        <p>Dapatkan nama domain profesional yang sesuai dengan bisnis dan merek Anda.</p>
-                    </div>
+                <div class="col-md-4 section-fifth-text">
+                    <h1 class="fw-bold text-black fs-3">Custom Domains</h1>
+                    <p class="fs-6 mb-0">Dapatkan nama domain profesional yang sesuai dengan bisnis dan merek Anda.</p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="section-services-fifth py-4 bg-white">
+    <section class="section-sixth py-4 bg-white">
         <div class="container">
-            <div class="section-services-fifth-title text-center mb-4">
-                <h1 class="text-black overflow-hidden" data-aos="fade-up" data-aos-duration="2000">Pilih Paket Sesuai Kebutuhan Anda</h1>
+            <div class="section-sixth-text text-center mb-4">
+                <h1 class="text-black overflow-hidden fs-1" data-aos="fade-up" data-aos-duration="2000">Pilih Paket Sesuai Kebutuhan Anda</h1>
             </div>
-            <div class="section-services-fifth-body mb-3 d-flex flex-column justify-content-center align-items-center text-center">
-                <h4 class="fw-bold text-black" data-aos="fade-up" data-aos-duration="2000">Website Personal</h4>
+            <div class="section-sixth-text mb-3 d-flex flex-column justify-content-center align-items-center text-center">
+                <h1 class="fw-bold text-black fs-4" data-aos="fade-up" data-aos-duration="2000">Website Personal</h1>
                 <p class="w-50" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="100">Dapatkan Best Price potongan sebesar Rp.2.000.000 dengan berlangganan selama 2 tahun.</p>
-                <div class="service-image-wrap background-gray px-2 py-3 w-100 row mb-5">
+                <div class="section-sixth-img-wrap background-gray px-2 py-3 w-100 row mb-5">
                     <div class="col-md-6 mb-3">
                         <img src="./assets/img/NineodFreight.png" alt="nineod-freight" class="img-fluid img-services">
                     </div>
@@ -201,9 +187,9 @@
                         <img src="./assets/img/HOME-Sinar-Indah-Plastic.png" alt="HOME-Sinar-Indah-Plastic" class="img-fluid img-services">
                     </div>
                 </div>
-                <h4 class="fw-bold text-black" data-aos="fade-up" data-aos-duration="2000">Website Platform</h4>
+                <h1 class="fw-bold text-black fs-4" data-aos="fade-up" data-aos-duration="2000">Website Platform</h1>
                 <p class="w-50" data-aos="fade-up" data-aos-duration="2000">Dapatkan kode refferal dan potongan harga. Dengan mereferensikan paket yang anda pilih ke teman atau kolega anda.</p>
-                <div class="service-image-wrap background-gray p-2 w-100 row mb-5">
+                <div class="section-sixth-img-wrap background-gray p-2 w-100 row mb-5">
                     <div class="col-md-6 mb-3">
                         <img src="./assets/img/burger_edited.jpg" alt="nineod-freight" class="img-fluid img-services">
                     </div>
@@ -211,7 +197,7 @@
                         <img src="./assets/img/Luxury-Hotels-Resorts-in-Sri-Lanka-Resplendent-Ceylon-Official-Website.png" alt="nineod-freight" class="img-fluid img-services">
                     </div>
                 </div>
-                <h4 class="fw-bold text-black" data-aos="fade-up" data-aos-duration="2000">Pilihan Kategori Platform</h4>
+                <h1 class="fw-bold text-black fs-4" data-aos="fade-up" data-aos-duration="2000">Pilihan Kategori Platform</h1>
                 <p class="w-50" data-aos="fade-up" data-aos-duration="2000">Dengan memilih paket Mandala atau Trikora, Anda dapat memilih 1 kategori platform.</p>
                 <div data-aos="fade-up" data-aos-duration="2000" data-aos-delay="100">
                     <a href="#" class="btn-selengkapnya py-2 px-3 mb-3">Selengkapnya</a>
