--- a/website-builder.html
+++ b/website-builder.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./assets/css/bootstrap/bootstrap.min.css" />
   <link rel="stylesheet" href="./assets/css/fontawesome/css/all.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <link rel="stylesheet" href="./assets/css/aos/aos.css">k
+  <link rel="stylesheet" href="./assets/css/aos/aos.css">
   <title>Website Builder | Nineod</title>
 </head>
 
@@ -28,7 +28,7 @@
             <li><a href="/#about" class="page-scroll">About</a></li>
             <li><a href="/#projects" class="page-scroll">Projects</a></li>
             <li>
-              <span class="position-relative">Service <i class="fas fa-chevron-down arrow-dropdown fs-6"></i></span> 
+              <span class="position-relative">Service <i class="fas fa-chevron-down arrow-dropdown fs-6"></i></span>
               <ul class="ps-0">
                 <li><a href="website-builder.html" id="website-link">Website Builder</a></li>
                 <li><a href="platform-builder.html" id="platform-link">Platform Builder</a></li>
@@ -76,18 +76,18 @@
       </div>
     </nav>
   </header>
-  <section class="website-home">
+  <section class="section-first website-background">
     <div class="background-dark">
       <div class="container">
-        <div class="website-home-body d-flex flex-column justify-content-center text-center align-items-center text-white">
+        <div class="section-first-body d-flex flex-column justify-content-center text-center align-items-center text-white">
           <h1 class="text-capitalize mb-3 fw-light" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
             Buat Website personal Anda
           </h1>
-          <div class="fs-5 description" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
+          <div data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
             <p class="mb-0 fw-light">
               Buat website portofolio Anda agar terlihat lebih professional.
             </p>
-            <p class="mb-3 fw-light">
+            <p class="mb-4 fw-light">
               Dan tingkatkan personal branding dan juga online presence Anda.
             </p>
           </div>
@@ -103,47 +103,49 @@
   <a href="https://api.whatsapp.com/send?phone=+628112108020&text=Hello,%20i%20want%20to%20ask%20about%20website" class="wa-image-wrapper shadow d-flex justify-content-center align-items-center">
     <img src="./assets/img/iconfinder_social-whatsapp-circle_4017334.svg" alt="whatsapp-image" class="wa-image rounded-circle" />
   </a>
-  <section class="profesional-blog d-flex">
-    <div class="profesional-blog-title justify-content-center d-flex flex-column">
-      <h1 data-aos="fade-right" data-aos-duration="2000">Professional Blog</h1>
-      <p data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500">
-        Buat blog dengan fitur menarik untuk mengembangkan jangkauan Anda dan
-        membangun komunitas.
-      </p>
-    </div>
-    <div class="profesional-blog-img d-flex align-items-center justify-content-center">
-      <img src="./assets/img/profesional-blog-img.png" alt="profesional-blog-img" />
+  <section class="section-second py-10">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 section-second-text justify-content-center d-flex flex-column">
+          <h1 data-aos="fade-right" data-aos-duration="2000">Professional Blog</h1>
+          <p data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500">
+            Buat blog dengan fitur menarik untuk mengembangkan jangkauan Anda dan
+            membangun komunitas.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <img src="./assets/img/profesional-blog-img.png" alt="profesional-blog-img" class="img-fluid text-center" />
+        </div>
+      </div>
     </div>
   </section>
-  <section class="profesional-logo py-5 overflow-hidden">
+  <section class="section-third py-5 overflow-hidden background-info">
     <div class="container">
       <div class="row gy-4">
         <div class="col-md-6">
           <img src="./assets/img/profesional-logo-img.jpg" alt="profesional-logo-img" class="img-fluid w-100 h-100 profesional-logo-img" data-aos="fade-right" data-aos-duration="2000" />
         </div>
-        <div class="col-md-6">
-          <div class="profesional-logo-title h-100 d-flex flex-column justify-content-center">
-            <h1 data-aos="fade-left" data-aos-duration="2000">Professional Logo</h1>
-            <p data-aos="fade-left" data-aos-duration="2000" data-aos-delay="500">
-              Rancang logo profesional untuk merek atau bisnis Anda, hak
-              komersial penuh & semua format file yang Anda butuhkan.
-            </p>
-            <p data-aos="fade-left" data-aos-duration="2000" data-aos-delay="600">
-              Sekecil apa pun logo Anda, itu memiliki peran yang cukup besar
-              untuk dimainkan. Itu akan terlihat di mana-mana, baik online
-              maupun offline. Selain itu, ini akan berfungsi sebagai tanda
-              referensi visual untuk merek Anda, dan akan mengirimkan pesan
-              perusahaan Anda kepada klien dan calon klien Anda.
-            </p>
-          </div>
+        <div class="col-md-6 section-third-text d-flex flex-column justify-content-center">
+          <h1 data-aos="fade-left" data-aos-duration="2000">Professional Logo</h1>
+          <p data-aos="fade-left" data-aos-duration="2000" data-aos-delay="500">
+            Rancang logo profesional untuk merek atau bisnis Anda, hak
+            komersial penuh & semua format file yang Anda butuhkan.
+          </p>
+          <p data-aos="fade-left" data-aos-duration="2000" data-aos-delay="600">
+            Sekecil apa pun logo Anda, itu memiliki peran yang cukup besar
+            untuk dimainkan. Itu akan terlihat di mana-mana, baik online
+            maupun offline. Selain itu, ini akan berfungsi sebagai tanda
+            referensi visual untuk merek Anda, dan akan mengirimkan pesan
+            perusahaan Anda kepada klien dan calon klien Anda.
+          </p>
         </div>
       </div>
     </div>
   </section>
-  <section class="show-creation py-4 overflow-hidden">
+  <section class="section-fourth py-5 overflow-hidden">
     <div class="container">
-      <div class="show-creation-content d-flex">
-        <div class="show-creation-title w-50 d-flex flex-column justify-content-center">
+      <div class="row">
+        <div class="col-md-6 section-fourth-text d-flex flex-column justify-content-center">
           <h1 data-aos="fade-right" data-aos-duration="2000">Pamerkan Karya Anda Sekarang Juga</h1>
           <p data-aos="fade-right" data-aos-duration="2000" data-aos-delay="200">
             Anda bisa memamerkan karya yang anda miliki dan bangun kepercayaan
@@ -151,8 +153,8 @@
             keinginan anda.
           </p>
         </div>
-        <div class="show-creation-img w-50 mb-4 d-flex justify-content-end">
-          <img src="./assets/img/show-creation-img.webp" alt="show-creation" class="img-fluid w-75" data-aos="fade-left" data-aos-duration="2000" />
+        <div class="col-md-6 mb-4">
+          <img src="./assets/img/show-creation-img.webp" alt="show-creation" class="img-fluid" data-aos="fade-left" data-aos-duration="2000" />
         </div>
       </div>
     </div>
