--- a/platform-builder.html
+++ b/platform-builder.html
@@ -28,7 +28,7 @@
             <li><a href="/#about" class="page-scroll">About</a></li>
             <li><a href="/#projects" class="page-scroll">Projects</a></li>
             <li>
-              <span class="position-relative">Service <i class="fas fa-chevron-down arrow-dropdown fs-6"></i></span> 
+              <span class="position-relative">Service <i class="fas fa-chevron-down arrow-dropdown fs-6"></i></span>
               <ul class="ps-0">
                 <li><a href="website-builder.html" id="website-link">Website Builder</a></li>
                 <li><a href="platform-builder.html" id="platform-link">Platform Builder</a></li>
@@ -76,10 +76,10 @@
       </div>
     </nav>
   </header>
-  <section class="platform-home">
+  <section class="section-first platform-background">
     <div class="background-dark-thin">
       <div class="container">
-        <div class="platform-home-body d-flex flex-column justify-content-center text-center align-items-center text-white">
+        <div class="section-first-body d-flex flex-column justify-content-center text-center align-items-center text-white">
           <h1 class="text-capitalize mb-3 fw-light" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
             kembangkan bisnis anda secara online
           </h1>
@@ -100,49 +100,46 @@
   <a href="https://api.whatsapp.com/send?phone=+628112108020&text=Hello,%20i%20want%20to%20ask%20about%20website" class="wa-image-wrapper shadow d-flex justify-content-center align-items-center">
     <img src="./assets/img/iconfinder_social-whatsapp-circle_4017334.svg" alt="whatsapp-image" class="wa-image rounded-circle" />
   </a>
-  <section class="section-one">
+  <section class="section-second py-5">
     <div class="container d-flex">
       <div class="row gy-4">
-        <div class="col-md-6">
-          <div class="section-one-title d-flex flex-column" data-aos="fade-right" data-aos-duration="2000">
-            <h2 class="fw-bold text-black">
-              Kembangkan dan Kelola Restoran Anda
-            </h2>
-            <p class="mb-4">
-              Mulai Bangun bisnis Restoran anda, dapatkan kemudahan dalam
-              reservasi produk makanan anda.
-            </p>
-
-            <div class="row">
-              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
-                <h5 class="fw-bold mb-3">Pemesanan Online</h5>
-                <p>
-                  Terima pesanan & terima pembayaran online anda . Biarkan
-                  pelanggan anda memesan dan melakukan pengambilan produk anda
-                  dengan mudah cepat.
-                </p>
-              </div>
-              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="400">
-                <h5 class="fw-bold mb-3">Manajemen Reservasi</h5>
-                <p>
-                  Dapatkan Kemudahan dalam reservasi online & Kirim konfirmasi
-                  otomatis kepada pelanggan
-                </p>
-              </div>
-              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500">
-                <h5 class="fw-bold mb-3">Custom Menu</h5>
-                <p>
-                  Buat dan kelola menu online untuk restoran anda dan jangkau
-                  lebih banyak pembeli.
-                </p>
-              </div>
-              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="600">
-                <h5 class="fw-bold mb-3">Pembayaran Online yang Aman</h5>
-                <p>
-                  Biarkan pelanggan membayar dengan kartu kredit, dompet
-                  digital, atau uang tunai
-                </p>
-              </div>
+        <div class="col-md-6 section-second-text d-flex flex-column" data-aos="fade-right" data-aos-duration="2000">
+          <h1 class="fw-bold text-black fs-2">
+            Kembangkan dan Kelola Restoran Anda
+          </h1>
+          <p class="mb-4">
+            Mulai Bangun bisnis Restoran anda, dapatkan kemudahan dalam
+            reservasi produk makanan anda.
+          </p>
+          <div class="row">
+            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
+              <h1 class="fw-bold mb-3 fs-5">Pemesanan Online</h1>
+              <p>
+                Terima pesanan & terima pembayaran online anda . Biarkan
+                pelanggan anda memesan dan melakukan pengambilan produk anda
+                dengan mudah cepat.
+              </p>
+            </div>
+            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="400">
+              <h1 class="fw-bold mb-3 fs-5">Manajemen Reservasi</h1>
+              <p>
+                Dapatkan Kemudahan dalam reservasi online & Kirim konfirmasi
+                otomatis kepada pelanggan
+              </p>
+            </div>
+            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500">
+              <h1 class="fw-bold mb-3 fs-5">Custom Menu</h1>
+              <p>
+                Buat dan kelola menu online untuk restoran anda dan jangkau
+                lebih banyak pembeli.
+              </p>
+            </div>
+            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="600">
+              <h1 class="fw-bold mb-3 fs-5">Pembayaran Online yang Aman</h1>
+              <p>
+                Biarkan pelanggan membayar dengan kartu kredit, dompet
+                digital, atau uang tunai
+              </p>
             </div>
           </div>
         </div>
@@ -152,15 +149,15 @@
       </div>
     </div>
   </section>
-  <section class="section-two py-5 overflow-hidden">
+  <section class="section-third py-5 overflow-hidden background-info">
     <div class="container">
       <div class="row gy-4">
         <div class="col-md-6">
-          <img src="./assets/img/b71c4b_36efeb33a7de4687b9b64ac76e03d939.jpg" alt="profesional-logo-img" class="img-fluid w-100 h-100 section-two-img" data-aos="fade-right" data-aos-duration="2000" />
+          <img src="./assets/img/b71c4b_36efeb33a7de4687b9b64ac76e03d939.jpg" alt="section-third-img" class="img-fluid w-100 h-100 section-two-img" data-aos="fade-right" data-aos-duration="2000" />
         </div>
         <div class="col-md-6">
-          <div class="section-two-title h-100 d-flex flex-column justify-content-center" data-aos="fade-left" data-aos-duration="2000">
-            <h2 class="fw-bold text-black">Kelola Reservasi Hotel</h2>
+          <div class="section-third-text h-100 d-flex flex-column justify-content-center" data-aos="fade-left" data-aos-duration="2000">
+            <h1 class="fw-bold text-black fs-2">Kelola Reservasi Hotel</h1>
             <p class="mb-4">
               Ayo Bangun Bisnis Hotel impian Anda, Dapatkan kemudahan dalam
               reservasi hotel anda. Nikmati berbagai macam fitur untuk
@@ -168,7 +165,7 @@
             </p>
             <div class="row">
               <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="300">
-                <h5 class="fw-bold mb-3">Sewa & Daftar Hotel Online</h5>
+                <h1 class="fw-bold mb-3 fs-5">Sewa & Daftar Hotel Online</h1>
                 <p>
                   Avenir Light is a clean and stylish font favored by
                   designers. It's easy on the eyes and a great go to font for
@@ -176,7 +173,7 @@
                 </p>
               </div>
               <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="400">
-                <h5 class="fw-bold mb-3">Kelola Reservasi</h5>
+                <h1 class="fw-bold mb-3 fs-5">Kelola Reservasi</h1>
                 <p>
                   Avenir Light is a clean and stylish font favored by
                   designers. It's easy on the eyes and a great go to font for
@@ -184,7 +181,7 @@
                 </p>
               </div>
               <div class="col-md-6" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="500">
-                <h5 class="fw-bold mb-3">Kirim Email Informasi Instan</h5>
+                <h1 class="fw-bold mb-3 fs-5">Kirim Email Informasi Instan</h1>
                 <p>
                   Tamu Anda akan secara otomatis mendapatkan email konfirmasi
                   setelah mereka memesan kamar.
@@ -196,52 +193,50 @@
       </div>
     </div>
   </section>
-  <section class="section-one overflow-hidden">
+  <section class="section-fourth py-5 overflow-hidden ">
     <div class="container d-flex">
       <div class="row gy-4">
-        <div class="col-md-6">
-          <div class="section-one-title d-flex flex-column" data-aos="fade-right" data-aos-duration="2000">
-            <h2 class="fw-bold text-black">
-              Buat Situs Toko Online dengan Mudah
-            </h2>
-            <p class="mb-4">
-              Mulai kembangkan bisnis anda di era digital ini, dan manfaatkan
-              fitur-fitur menarik yang kami sediakan.
-            </p>
-            <div class="row">
-              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
-                <h5 class="fw-bold mb-3">Pembayaran Online yang Aman</h5>
-                <p>
-                  Terima pembayaran online yang aman & kelola semua transaksi
-                  dari dasbor Wix Anda.
-                </p>
-              </div>
-              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="400">
-                <h5 class="fw-bold mb-3">Paket & Pembayaran Berulang</h5>
-                <p>
-                  Tawarkan berbagai paket harga, mulai jual langganan &
-                  kumpulkan pembayaran berulang.
-                </p>
-              </div>
-              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500">
-                <h5 class="fw-bold mb-3">Produk Tak Terbatas</h5>
-                <p>
-                  Tampilkan produk & koleksi Anda tanpa batas dan berikan opsi
-                  pengurutan & filter agar pelanggan dapat berbelanja dengan
-                  mudah.
-                </p>
-              </div>
-              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="600">
-                <h5 class="fw-bold mb-3">Jual di Marketplaces</h5>
-                <p>
-                  Jangkau lebih banyak pembeli & jual di marketplace manapun.
-                </p>
-              </div>
+        <div class="col-md-6 section-fourth-text d-flex flex-column justify-content-center" data-aos="fade-right" data-aos-duration="2000">
+          <h1 class="fw-bold text-black fs-2">
+            Buat Situs Toko Online dengan Mudah
+          </h1>
+          <p class="mb-4">
+            Mulai kembangkan bisnis anda di era digital ini, dan manfaatkan
+            fitur-fitur menarik yang kami sediakan.
+          </p>
+          <div class="row">
+            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
+              <h1 class="fw-bold mb-3 fs-5">Pembayaran Online yang Aman</h1>
+              <p>
+                Terima pembayaran online yang aman & kelola semua transaksi
+                dari dasbor Wix Anda.
+              </p>
+            </div>
+            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="400">
+              <h1 class="fw-bold mb-3 fs-5">Paket & Pembayaran Berulang</h1>
+              <p>
+                Tawarkan berbagai paket harga, mulai jual langganan &
+                kumpulkan pembayaran berulang.
+              </p>
+            </div>
+            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500">
+              <h1 class="fw-bold mb-3 fs-5">Produk Tak Terbatas</h1>
+              <p>
+                Tampilkan produk & koleksi Anda tanpa batas dan berikan opsi
+                pengurutan & filter agar pelanggan dapat berbelanja dengan
+                mudah.
+              </p>
+            </div>
+            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="600">
+              <h1 class="fw-bold mb-3 fs-5">Jual di Marketplaces</h1>
+              <p>
+                Jangkau lebih banyak pembeli & jual di marketplace manapun.
+              </p>
             </div>
           </div>
         </div>
         <div class="col-md-6">
-          <img src="./assets/img/S1.jpg" alt="burger_edited" class="section-one-img img-fluid" data-aos="fade-left" data-aos-duration="2000" />
+          <img src="./assets/img/S1.jpg" alt="S1" class="img-fluid" data-aos="fade-left" data-aos-duration="2000" />
         </div>
       </div>
     </div>
